<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/gray_background"
    android:padding="8dp"
    android:layout_height="match_parent">

    <!-- Заголовок "Вчера" -->
    <TextView
        android:id="@+id/titleYesterday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleYesterday"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Карточка активности -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/titleYesterday"
        android:layout_marginTop="16dp"
        android:id="@+id/card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <!-- Дистанция -->
            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDistance"
                android:textColor="@color/main_title_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- Длительность -->
            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDuration"
                android:textColor="@color/main_title_color"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tvDistance"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

            <!-- Айди пользователя -->
            <TextView
                android:id="@+id/tvUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@van_darkholme"
                android:textColor="@color/primary_button_color"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Тип активности -->
            <TextView
                android:id="@+id/tvActivityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvActivityType"
                android:textColor="@color/main_title_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp"/>

            <!-- Сколько времени прошло -->
            <TextView
                android:id="@+id/tvTimeAgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTimeAgo"
                android:textColor="@color/subtitle_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Карточка №2 активности -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:layout_marginTop="16dp"
        android:id="@+id/card2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:layout_marginTop="8dp">

            <!-- Дистанция -->
            <TextView
                android:id="@+id/tv2Distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="228м"
                android:textColor="@color/main_title_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- Длительность -->
            <TextView
                android:id="@+id/tv2Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14 часов 48 минут"
                android:textColor="@color/main_title_color"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv2Distance"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

            <!-- Айди пользователя -->
            <TextView
                android:id="@+id/tv2UserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@techniquepasha"
                android:textColor="@color/primary_button_color"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Тип активности -->
            <TextView
                android:id="@+id/tv2ActivityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Качели"
                android:textColor="@color/main_title_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp"/>

            <!-- Сколько времени прошло -->
            <TextView
                android:id="@+id/tv2TimeAgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTimeAgo"
                android:textColor="@color/subtitle_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Карточка №3 активности -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/card2"
        android:layout_marginTop="16dp"
        android:id="@+id/card3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:layout_marginTop="8dp">

            <!-- Дистанция -->
            <TextView
                android:id="@+id/tv3Distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 км"
                android:textColor="@color/main_title_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- Длительность -->
            <TextView
                android:id="@+id/tv3Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 час 10 минут"
                android:textColor="@color/main_title_color"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv3Distance"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

            <!-- Айди пользователя -->
            <TextView
                android:id="@+id/tv3UserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@morgen_shtern"
                android:textColor="@color/primary_button_color"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Тип активности -->
            <TextView
                android:id="@+id/tv3ActivityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Езда на кадилак"
                android:textColor="@color/main_title_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp"/>

            <!-- Сколько времени прошло -->
            <TextView
                android:id="@+id/tv3TimeAgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTimeAgo"
                android:textColor="@color/subtitle_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Контейнер для замены фрагментов -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/card3"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>